# propagation

./: CMakeLists.txt  README.md
include/: propagate.h
src/: propagate.cpp  propagate_exec.cpp
